--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Welcome to my BI Site</h1>
     <p>welcome to my place of showing analytics, come back soon to see what changes I have made</p>
+
+    <a href="mariokart_site/">MarioKart Site</a>
 </body>
 </html>
